update after summer

--- a/about/index.html
+++ b/about/index.html
@@ -150,7 +150,7 @@
     <img src="https://selenatabbara.github.io/portfolio/images/me.JPG"/> 
 </figure>
 
-<p>I am a final year student in MEng Electrical and Electronics Engineering at Imperial College London. I am originally from Beirut (Lebanon), but I have moved to London to pursue my studies. I have been in a French school, so I speak French, Arabic and English.</p>
+<p>I am a final year student in MEng Electrical and Electronic Engineering at Imperial College London. I am originally from Beirut (Lebanon), but I have moved to London to pursue my studies. I have been in a French school, so I speak French, Arabic and English.</p>
 <p>I am passionate about Machine Learning and its different applications. In my spare time, I compose and play the piano. I am passionate about sports: powerlifting, martial arts, basketball and volleyball.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
