--- a/experience/index.html
+++ b/experience/index.html
@@ -168,7 +168,7 @@
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       I am working as part of Undergraduate Research Opportunities Program (UROP) at the Information Processing and Communications Lab at Imperial College London.
-Privacy Aware Sharing in Smart Grids In the new generation electricity supply networks, smart meters play a key role in recording the electricity consumption of a household by reporting it to the utility provider in real time. However, this real-time information also carries sensitive personal information about the user&rsquo;s activities.
+Privacy Aware Sharing in Smart Grids In the new generation electricity supply networks, smart meters play a key role in recording the electricity consumption of a household by reporting it to the utility provider in real-time. However, this real-time information also carries sensitive personal information about the user’s activities.
     </div>
   </div>
 
