--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           I am working as part of Undergraduate Research Opportunities Program (UROP) at the Information Processing and Communications Lab at Imperial College London.
-Privacy Aware Sharing in Smart Grids In the new generation electricity supply networks, smart meters play a key role in recording the electricity consumption of a household by reporting it to the utility provider in real time. However, this real-time information also carries sensitive personal information about the user&rsquo;s activities.
+Privacy Aware Sharing in Smart Grids In the new generation electricity supply networks, smart meters play a key role in recording the electricity consumption of a household by reporting it to the utility provider in real-time. However, this real-time information also carries sensitive personal information about the user’s activities.
         </div>
           <a href="https://selenatabbara.github.io/portfolio/experience/urop-2020/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
@@ -293,7 +293,7 @@ The Rapid Embedded Design and Programming Online Course is a 10/14 weeks univers
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          With the advance of smartphones, wearables devices and other Internet of Things devices, there is a variety of sensors that are generating time-series measurements of your daily activity. These sensors allow the emergence of new services which are beneficial to several areas including health monitoring, safety and productivity. While cameras, microphones and the location are preserved as privacy-sensitive, the privacy implication of activity recognition sensors is still underestimated. In fact, the detailed time-series user data shared with untrusted third parties could be used to infer private and sensitive information user information (e.
+          With the advance of smartphones, wearables devices, and other Internet of Things devices, there is a variety of sensors that are generating time-series measurements of your daily activity. These sensors allow the emergence of new services that are beneficial to several areas including health monitoring, safety, and productivity. While cameras, microphones, and the location are preserved as privacy-sensitive, the privacy implication of activity recognition sensors is still underestimated. In fact, the detailed time-series user data shared with untrusted third parties could be used to infer private and sensitive information user information (e.
         </div>
           <a href="https://selenatabbara.github.io/portfolio/post/final-year-project/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
