--- a/about/index.html
+++ b/about/index.html
@@ -147,8 +147,8 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure class="center">
-    <img src="https://selenatabbara.github.io/portfolio/images/me.jpg" height="350"/> 
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure>
+    <img src="https://selenatabbara.github.io/portfolio/images/me.JPG" height="350"/> 
 </figure>
 
 <p>I am a final year student in MEng Electrical and Electronic Engineering at Imperial College London. I am originally from Beirut (Lebanon), but I have moved to London to pursue my studies. I have been in a French school, so I speak French, Arabic and English.</p>
