--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <main class="pb7" role="main">
       
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-    <p>I am a final year student in MEng Electrical and Electronics Engineering at Imperial College London. I am passionate about Machine Learning and Data Science. I have worked on the applications of Machine Learning in the context of Health care and the privacy of sensory data.  I am looking for a job that can challenge me every day. I would love to be surrounded by knowledgeable and experienced individuals that can help me to grow both professionally and personally.</p>
+    <p>I am a final year student in MEng Electrical and Electronics Engineering at Imperial College London. I am passionate about Machine Learning and Data Science. I have worked on the applications of Machine Learning in the context of Health care and the privacy of sensory data.  I am looking for a job that can challenge me every day. I would love to be surrounded by knowledgeable and experienced individuals that can help me grow both professionally and personally.</p>
 
   </article>
     
